More formatting fixes